--- a/style.css
+++ b/style.css
@@ -2,47 +2,63 @@ html {
   background-image: radial-gradient( circle at center, #080808, #333333); 
   color: white;
   font-family: 'Sometype Mono', monospace;
-
+  width: 100%;
+  height: 100%;
 
 
 }
+
+h3{
+  margin: 10px;
+}
+
+li{
+  text-align: left;
+}
+
+
+
+
+.menu{
+  background-image: radial-gradient( circle at center, #080808, #333333); 
+  box-shadow: 0 0 20px 20px rgb(48, 33, 102);
+  border-radius: 5%;
+  position: fixed;
+  top: 0;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+  width: 100%;
+  height: 50px;
+  padding: 10px 0;
   
+}
   .perfil {
     max-width: 500px;
     width: 90%; /* Define a largura do contêiner em relação à largura da janela */
     margin: 0 auto;
     text-align: center;
-    border-radius: 2%;
-    background-color: rgb(48, 33, 102);
+    border-radius: 10%;
+
     color: white;
     overflow: auto;
-    box-shadow: 5px 5px 10px rgb(48, 33, 102);
+    box-shadow: 0 0 20px 20px rgb(48, 33, 102);
 
 }
 
 
 
-  .experiencia {
+
+  .informacoes {
     max-width: 500px;
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
     text-align: center;
-
-
     color: white;
-    overflow: auto;
 
-}
 
-  .formacao {
-    max-width: 500px;
-    width: 90%;
-    margin: 0 auto;
-    text-align: center;
-    border-radius: 2%;
-    background-color: rgb(48, 33, 102);
-    color: white;
-    box-shadow: 5px 5px 10px rgb(48, 33, 102);
 
 
 }
@@ -63,14 +79,13 @@ html {
 .divs{
   padding: 10px;
   max-width: 500px;
-  height: 80%;
-  width: 60%; /* Defina a largura desejada para cada caixa */
+  height: 100%;
+
+  width: 100%; /* Defina a largura desejada para cada caixa */
   border-radius: 2%;
   text-align: center;
-  box-shadow: 5px 5px 10px rgb(48, 33, 102);
-  background-color: rgb(48, 33, 102);
-  margin-right: 30px;
 
+  margin-right: 30px;
 
 
 }
@@ -78,12 +93,20 @@ html {
 .redes{
   text-align: center;
   margin: auto;
-  background-color: white;
+
+
   border-radius: 2%;
   width: 97%;
-  box-shadow: 5px 5px 10px rgb(194, 175, 247);
-  padding: 10px;
   height: 80%;
+  max-height: 60px;
+
+  padding: 10px;
+
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+
 }
 
 
@@ -99,28 +122,116 @@ html {
 
 }
 
-
-
-
-
 .fas.fa-cogs{
   color: rgb(193, 127, 255);
   font-size: 60px;
 }
-  .fab.fa-linkedin {
-    color: #0077B5;
-    }
-  
-        .fab.fa-linkedin:hover {
-  color: #000000;
+
+.fas.fa-flask{
+  color: rgb(193, 127, 255);
+  font-size: 60px;
+}
+
+
+
+.div-instagram{
+  background-image: radial-gradient(circle at bottom left, #F9DC64,   #FF553E , #B5008E);
+  width: 53px;
+  height: 53px;
+  border-radius: 15%;
+  margin-left: 10px;
+}
+
+.fab.fa-instagram{
+  color: #ffffff;
+  font-size: 50px;
+  margin-top: 2px;
+  margin-left: 2px;
+  margin-right: 3px;
+  margin-bottom: 2px;
+
+}
+.div-instagram:hover{
+  background-image: radial-gradient(circle at bottom left, #000000,   #000000 , #000000);
+  width: 73px;
+  height: 73px;
+  .fab.fa-instagram{
+  font-size: 70px;
+  margin-top: 2px;
+  margin-left: 2px;
+  margin-right: 3px;
+  margin-bottom: 2px;
+}
+}
+
+
+
+.fab.fa-linkedin {
+  color: #0077B5;
+  font-size: 60px;
+  background-color: white;
+  border-radius: 10%;
+  height: 40px;
+  width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   }
   
-  .fab.fa-facebook-square {
-    color: rgb(30, 48, 80);
-    }
-  
-        .fab.fa-facebook-square:hover {
+.fab.fa-linkedin:hover {
+    height: 60px;
+    width: 60px;
   color: #000000;
+  font-size: 80px;
+
   }
+
+
+
+.fab.fa-github {
+  color: rgb(30, 48, 80);
+  font-size: 60px;
+  margin-left: 10px;
+
+  background-color: white;
+  border-radius: 50%;
+  height: 55px;
+  width: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.fab.fa-github:hover{
+  color: #000000;
+  font-size: 80px;
+  height: 75px;
+  width: 65px;
+}
+  
+
+
+.fab.fa-whatsapp-square{
+  color: rgb(1, 172, 1);
+  font-size: 60px;
+  margin-left: 10px;
+
+  background-color: white;
+  border-radius: 50%;
+  height: 55px;
+  width: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.fab.fa-whatsapp-square:hover{
+  color: #000000;
+  font-size: 80px;
+  height: 70px;
+  width: 65px;
+}
+  
 
 
