--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 /* Aqui temos o ccs padrão para os elementos do site no geral. Defini a cor de fundo como uma 
 gradiente, a cor do texto como branco, a fonte escolhida e as proporções. No h3 defini que
 a margem deverá ser padrão de 10px e nos li que o texto deve estar mais a esquerda*/
@@ -9,8 +7,6 @@ html {
   font-family: 'Sometype Mono', monospace;
   width: 100%;
   height: 100%;
-
-
 }
 
 h3{
@@ -20,8 +16,6 @@ h3{
 li{
   text-align: left;
 }
-
-
 
 /* Na classe menu se encontra o estilo do menu que tem links para dentro da própria página.
 Os códigos façam com que o menu fique fixo no topo, tenha uma cor de fundo igual o html geral,
@@ -39,7 +33,6 @@ tenha uma box shadow, e fique sempre centralizado, além de outros elementos vis
   width: 99%;
   height: 50px;
   padding: 10px 0;
-
 }
 
 /* Aqui eu uso esta classe no div do meu perfil, para um aspecto mais elegante*/
@@ -53,10 +46,7 @@ tenha uma box shadow, e fique sempre centralizado, além de outros elementos vis
     color: white;
     overflow: auto;
     box-shadow: 0 0 20px 20px rgb(48, 33, 102);
-
 }
-
-
 
 /* Classe para os divs que contenham as informações (Experiencia, Formação Acadêmica e Habilidades)*/
   .informacoes {
@@ -65,12 +55,7 @@ tenha uma box shadow, e fique sempre centralizado, além de outros elementos vis
     margin: 0 auto;
     text-align: center;
     color: white;
-
-
-
-
 }
-
 
 /* Nas classes div-pai-experiencia e divs, usei um método de um div dentro de outro para que 
 consiga colocar 2 divs lado a lado*/
@@ -79,18 +64,14 @@ consiga colocar 2 divs lado a lado*/
   text-align: center;
   justify-content: center;
   align-items: center;
-
-  
-
 }
-
 
 .divs{
   padding: 10px;
   max-width: 500px;
   height: 100%;
 
-  width: 100%; /* Defina a largura desejada para cada caixa */
+  width: 100%;
   border-radius: 2%;
   text-align: center;
 
@@ -99,57 +80,39 @@ consiga colocar 2 divs lado a lado*/
 
 }
 
-
 /* Aqui é um div para as redes sociais que ficam no inferior do site*/
 .redes{
   text-align: center;
   margin: auto;
-
-
   border-radius: 2%;
   width: 97%;
   height: 80%;
   max-height: 60px;
-
   padding: 10px;
-
   display: flex;
   text-align: center;
   justify-content: center;
   align-items: center;
-
 }
 
-
 /* Nesses icones abaixo eu coloquei um padrão de tamanho e cores para os icones de Experiencia, Formação Acadêmica e Habilidades*/
-
-
   .fas.fa-graduation-cap{
   color: rgb(193, 127, 255);
   font-size: 60px;
-
 }
-
 .fas.fa-cogs{
   color: rgb(193, 127, 255);
   font-size: 60px;
 }
-
 .fas.fa-flask{
   color: rgb(193, 127, 255);
   font-size: 60px;
 }
 
-
-
-
 /*Em todo o código abaixo existe um padrão que implica no icone e um div de fundo, por estética.
 A lógica daqui é que eu crio o icone para a rede social externa e um div para acompanhar de fundo
 Então, quando passamos o mouse pelo div de fundo, acontece uma animação de os dois aumentarem de tamanho (usando o hover)*/
-
-
 .div-linkedln{
-
   background-color: white;
   border-radius: 10%;
   height: 40px;
@@ -157,31 +120,19 @@ Então, quando passamos o mouse pelo div de fundo, acontece uma animação de os
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
-
 .fab.fa-linkedin {
   color: #0077B5;
   font-size: 60px;
-
 }
-
-
 .div-linkedln:hover{
   height: 60px;
   width: 60px;
   .fab.fa-linkedin:hover {
     color: #000000;
     font-size: 80px;
-
-
   }
 }
-
-
-
-
-
 
 .div-github{
   margin-left: 30px;
@@ -192,29 +143,19 @@ Então, quando passamos o mouse pelo div de fundo, acontece uma animação de os
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
-
-
 .div-github:hover{
   height: 75px;
   width: 75px;
   .fab.fa-github:hover{
     color: #000000;
     font-size: 80px;
-  
   }
 }
-
 .fab.fa-github {
   color: rgb(30, 48, 80);
   font-size: 60px;
-
 }
-
-
-
-
 
 .div-instagram{
   margin-left: 25px;
@@ -222,9 +163,7 @@ Então, quando passamos o mouse pelo div de fundo, acontece uma animação de os
   width: 53px;
   height: 53px;
   border-radius: 15%;
-
 }
-
 .fab.fa-instagram{
   color: #ffffff;
   font-size: 50px;
@@ -232,7 +171,6 @@ Então, quando passamos o mouse pelo div de fundo, acontece uma animação de os
   margin-left: 3px;
   margin-right: 3px;
   margin-bottom: 2px;
-
 }
 .div-instagram:hover{
   background-image: radial-gradient(circle at bottom left, #000000,   #000000 , #000000);
@@ -240,13 +178,8 @@ Então, quando passamos o mouse pelo div de fundo, acontece uma animação de os
   height: 73px;
   .fab.fa-instagram{
   font-size: 70px;
-
+  }
 }
-}
-
-
-
-
 
 .div-whatsapp{
   margin-left: 25px;
@@ -258,14 +191,12 @@ Então, quando passamos o mouse pelo div de fundo, acontece uma animação de os
   align-items: center;
   justify-content: center;
 }
-
 .div-whatsapp:hover{
   height: 65px;
   width: 65px;
   .fab.fa-whatsapp-square:hover{
     color: #000000;
     font-size: 80px;
-  
   }
 }
 .fab.fa-whatsapp-square{
@@ -274,13 +205,7 @@ Então, quando passamos o mouse pelo div de fundo, acontece uma animação de os
 
 }
 
-
-
-
-
 /*Propositalmente, este é o único ícone que não muda de cor*/
-
-
 .div-email{
   margin-left: 25px;
   background-color: rgb(0, 0, 0);
@@ -291,20 +216,16 @@ border-radius: 10%;
   align-items: center;
   justify-content: center;
 }
-
 .div-email:hover{
   height: 60px;
   width: 80px;
   .fas.fa-envelope:hover{
-
     font-size: 80px;
-  
   }
 }
 .fas.fa-envelope{
   color: rgb(255, 255, 255);
   font-size: 60px;
-
 }
 
 
